--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,5 @@
 platform = atmelavr
 board = micro
 framework = arduino
-lib_deps = arduino-libraries/Keyboard@^1.0.6
+lib_deps =  arduino-libraries/Keyboard@^1.0.6
+            Mouse
